// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default transpiler 1`] = `
"var $M = require(\\"../../../api\\"),
    $iterator = $M.iterator,
    $iterFin = $M.iterFin,
    $context = $M.context,
    $ret = $M.ret,
    $unhandled = $M.unhandled,
    $raise = $M.raise,
    $brk = $M.brk,
    $mcall = $M.mcall,
    $m = $M.module(\\"test/__fixtures__/transform/code.js\\", null, typeof module === \\"undefined\\" ? null : module, null, \\"$\\", {
  __webpack_require__: typeof __webpack_require__ !== \\"undefined\\" && __webpack_require__
}, null),
    $s$1 = [{
  _require: [1, null],
  mod: [2, \\"1:8-1:11\\"],
  n: [3, \\"2:6-2:7\\"],
  k: [4, \\"3:6-3:7\\"],
  v0: [5, \\"7:4-7:6\\"],
  C: [6, \\"9:9-9:10\\"]
}, null, 0],
    $s$2 = [{
  a: [1, \\"9:11-9:12\\"],
  v1: [2, \\"10:6-10:8\\"],
  v3: [4, \\"13:8-13:10\\"],
  i: [6, \\"18:13-18:14\\"],
  v4: [7, \\"19:8-19:10\\"]
}, $s$1, 1],
    $s$3 = [{
  v2: [3, \\"12:10-12:12\\"]
}, $s$2, 1],
    $s$4 = [{
  i: [5, \\"15:15-15:16\\"]
}, $s$3, 1],
    $s$5 = [{
  e: [8, \\"20:11-20:12\\"]
}, $s$2, 1],
    $s$6 = [{
  v5: [1, \\"26:8-26:10\\"]
}, $s$1, 1],
    $m$code_js$0 = $M.fun(\\"m$code_js$0\\", \\"code.js\\", null, null, [], 1, 7, \\"1:0-29:0\\", 32, function code_js($, $l, $p) {
  var $1;

  for (;;) switch ($.state = $.goto) {
    case 0:
      $l[6
      /*C*/
      ] = $m$C$1($);
      $.goto = 1;
      $brk(\\"1:8-1:30\\");
      $.state = 1;

    case 1:
      $.goto = 2;
      $p = ($context.moduleId = require.resolve(\\"mod\\"), $M.force(require(\\"mod\\")));
      $.state = 2;

    case 2:
      $l[1
      /*_require*/
      ] = $p;
      $.goto = 3;
      $brk(\\"1:8-1:11\\");
      $.state = 3;

    case 3:
      $l[2
      /*mod*/
      ] = $l[1
      /*_require*/
      ].mod;
      $.goto = 4;
      $brk(\\"2:0-2:33\\");
      $.state = 4;

    case 4:
      $.goto = 5;
      $p = ($context.moduleId = require.resolve(\\"mod2_\\" + $l[2
      /*mod*/
      ]), $M.force(require(\\"mod2_\\" + $l[2
      /*mod*/
      ])));
      $.state = 5;

    case 5:
      $l[3
      /*n*/
      ] = $p;
      $.goto = 6;
      $brk(\\"3:0-3:33\\");
      $.state = 6;

    case 6:
      $1 = $l[3
      /*n*/
      ].n;
      $.goto = 7;
      $p = ($context.moduleId = require.resolve(\\"mod3_\\" + $1), $M.force(require(\\"mod3_\\" + $1)));
      $.state = 7;

    case 7:
      $l[4
      /*k*/
      ] = $p;
      $.goto = 8;
      $brk(\\"4:0-4:4\\");
      $.state = 8;

    case 8:
      $.goto = 9;
      ($context.call = $l[4
      /*k*/
      ])();
      $.state = 9;

    case 9:
      $.goto = 10;
      $brk(\\"5:0-5:4\\");
      $.state = 10;

    case 10:
      $.goto = 11;
      ($context.call = $l[3
      /*n*/
      ])();
      $.state = 11;

    case 11:
      $.goto = 12;
      $brk(\\"7:0-7:12\\");
      $.state = 12;

    case 12:
      $l[5
      /*v0*/
      ] = 10;
      $.goto = 13;
      $brk(\\"25:0-28:2\\");
      $.state = 13;

    case 13:
      module.exports.fn2 = $m$fn1$2($);
      $.goto = 15;
      continue;

    case 14:
      $.goto = 15;
      return $unhandled($.error);

    case 15:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 0, [[4, \\"1:8-1:30\\", $s$1], [2, \\"1:16-1:30\\", $s$1], [4, \\"1:8-1:11\\", $s$1], [4, \\"2:0-2:33\\", $s$1], [2, \\"2:10-2:32\\", $s$1], [4, \\"3:0-3:33\\", $s$1], [2, \\"3:10-3:32\\", $s$1], [4, \\"4:0-4:4\\", $s$1], [2, \\"4:0-4:3\\", $s$1], [4, \\"5:0-5:4\\", $s$1], [2, \\"5:0-5:3\\", $s$1], [4, \\"7:0-7:12\\", $s$1], [4, \\"25:0-28:2\\", $s$1], [0, \\"25:0-28:1\\", $s$1], [16, \\"29:0-29:0\\", $s$1], [16, \\"29:0-29:0\\", $s$1]]),
    $m$C$1 = $M.fun(\\"m$C$1\\", \\"C\\", null, $m$code_js$0, [\\"a\\"], 0, 12, \\"9:0-23:1\\", 0, function C($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"10:2-10:14\\");
      $.state = 1;

    case 1:
      $l[2
      /*v1*/
      ] = 10;
      $.goto = 2;
      $brk(\\"11:2-22:3\\");
      $.state = 2;

    case 2:
      $.goto = 3;
      $brk(\\"12:4-12:18\\");
      $.state = 3;

    case 3:
      $l[3
      /*v2*/
      ] = 11;
      $.goto = 4;
      $brk(\\"13:4-13:11\\");
      $.state = 4;

    case 4:
      $.goto = 5;
      $brk(\\"14:4-14:42\\");
      $.state = 5;

    case 5:
      $.goto = 6;
      $p = $mcall(\\"fn1\\", $l[0][2
      /*mod*/
      ], $l[1
      /*a*/
      ]);
      $.state = 6;

    case 6:
      $.goto = 7;
      $mcall(\\"proc1\\", $l[0][2
      /*mod*/
      ], $p, $l[0][5
      /*v0*/
      ], $l[2
      /*v1*/
      ], $l[3
      /*v2*/
      ], $l[4
      /*v3*/
      ]);
      $.state = 7;

    case 7:
      $.goto = 8;
      $brk(\\"15:4-17:5\\");
      $.state = 8;

    case 8:
      $.goto = 9;
      $p = $iterator(something);
      $.state = 9;

    case 9:
      $l[11] = $p;
      $.state = 10;

    case 10:
      $.goto = 11;
      $brk(\\"15:15-15:16\\");
      $.state = 11;

    case 11:
      $context.call = $l[11].next;
      $.goto = 12;
      $p = $l[11].next();
      $.state = 12;

    case 12:
      if ($p.done) {
        $.state = 13;
      } else {
        $.goto = 29;
        continue;
      }

    case 13:
      $.state = 14;

    case 14:
      $.goto = 15;
      $brk(\\"18:4-18:42\\");
      $.state = 15;

    case 15:
      $.goto = 16;
      $p = $iterator(something);
      $.state = 16;

    case 16:
      $l[11] = $p;
      $.state = 17;

    case 17:
      $.goto = 18;
      $brk(\\"18:13-18:14\\");
      $.state = 18;

    case 18:
      $context.call = $l[11].next;
      $.goto = 19;
      $p = $l[11].next();
      $.state = 19;

    case 19:
      if ($p.done) {
        $.state = 20;
      } else {
        $.goto = 24;
        continue;
      }

    case 20:
      $.state = 21;

    case 21:
      $.goto = 22;
      $brk(\\"19:4-19:17\\");
      $.state = 22;

    case 22:
      $l[7
      /*v4*/
      ] = 100;
      $.goto = 23;
      $brk(\\"20:3-20:3\\");
      $.state = 23;

    case 23:
      $.goto = 39;
      $brk(\\"23:1-23:1\\");
      continue;

    case 24:
      $l[6
      /*i*/
      ] = $p.value;
      $.goto = 25;
      $brk(\\"18:29-18:42\\");
      $.state = 25;

    case 25:
      $.goto = 17;
      $mcall(\\"proc3\\", $l[0][2
      /*mod*/
      ], $l[6
      /*i*/
      ]);
      continue;

    case 26:
      return $raise($.error);

    case 27:
      $.goto = 28;
      $iterFin($l[11]);
      $.state = 28;

    case 28:
      $.goto = $l[10];
      continue;

    case 29:
      $l[5
      /*i*/
      ] = $p.value;
      $.goto = 30;
      $brk(\\"16:6-16:19\\");
      $.state = 30;

    case 30:
      $.goto = 31;
      $mcall(\\"proc2\\", $l[0][2
      /*mod*/
      ], $l[5
      /*i*/
      ]);
      $.state = 31;

    case 31:
      $.goto = 10;
      $brk(\\"17:5-17:5\\");
      continue;

    case 32:
      return $raise($.error);

    case 33:
      $.goto = 34;
      $iterFin($l[11]);
      $.state = 34;

    case 34:
      $.goto = $l[9];
      continue;

    case 35:
      $l[8
      /*e*/
      ] = $.error;
      $.error = void 0;
      $.goto = 36;
      $brk(\\"21:4-21:24\\");
      $.state = 36;

    case 36:
      $.goto = 37;
      $mcall(\\"proc4\\", $l[0][2
      /*mod*/
      ], $l[8
      /*e*/
      ], $l[7
      /*v4*/
      ], $l[6
      /*i*/
      ]);
      $.state = 37;

    case 37:
      $.goto = 23;
      $brk(\\"22:3-22:3\\");
      continue;

    case 38:
      $.goto = 39;
      return $unhandled($.error);

    case 39:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, function ($, $l) {
  switch ($.state) {
    case 31:
    case 30:
    case 29:
    case 13:
    case 12:
    case 11:
    case 10:
      $.goto = 33;
      $l[9] = 32;
      break;

    case 25:
    case 24:
    case 20:
    case 19:
    case 18:
    case 17:
      $.goto = 27;
      $l[10] = 26;
      break;

    case 34:
    case 33:
    case 32:
    case 28:
    case 27:
    case 26:
    case 22:
    case 21:
    case 16:
    case 15:
    case 14:
    case 9:
    case 8:
    case 7:
    case 6:
    case 5:
    case 4:
    case 3:
    case 2:
      $.goto = 35;
      break;

    default:
      $.goto = 38;
  }
}, function ($, $l) {
  switch ($.state) {
    case 31:
    case 30:
    case 29:
    case 13:
    case 12:
    case 11:
    case 10:
      $l[9] = 39;
      $.goto = 33;
      break;

    case 25:
    case 24:
    case 20:
    case 19:
    case 18:
    case 17:
      $l[10] = 39;
      $.goto = 27;
      break;

    default:
      $.goto = 39;
      break;
  }
}, 1, [[4, \\"10:2-10:14\\", $s$2], [4, \\"11:2-22:3\\", $s$2], [5, \\"12:4-12:18\\", $s$3], [5, \\"13:4-13:11\\", $s$3], [5, \\"14:4-14:42\\", $s$3], [3, \\"14:14-14:24\\", $s$3], [3, \\"14:4-14:41\\", $s$3], [5, \\"15:4-17:5\\", $s$3], [3, \\"15:20-15:29\\", $s$4], [1, null, $s$2], [5, \\"15:15-15:16\\", $s$4], [3, \\"15:20-15:29\\", $s$4], [1, null, $s$2], [1, null, $s$2], [5, \\"18:4-18:42\\", $s$3], [3, \\"18:18-18:27\\", $s$3], [1, null, $s$2], [5, \\"18:13-18:14\\", $s$3], [3, \\"18:18-18:27\\", $s$3], [1, null, $s$2], [1, null, $s$2], [5, \\"19:4-19:17\\", $s$3], [37, \\"20:3-20:3\\", $s$2], [36, \\"23:1-23:1\\", $s$2], [5, \\"18:29-18:42\\", $s$3], [3, \\"18:29-18:41\\", $s$3], [1, null, $s$2], [3, \\"18:18-18:27\\", $s$3], [1, null, $s$2], [5, \\"16:6-16:19\\", $s$4], [3, \\"16:6-16:18\\", $s$4], [37, \\"17:5-17:5\\", $s$2], [1, null, $s$2], [3, \\"15:20-15:29\\", $s$4], [1, null, $s$2], [4, \\"21:4-21:24\\", $s$5], [2, \\"21:4-21:23\\", $s$5], [36, \\"22:3-22:3\\", $s$2], [16, \\"23:1-23:1\\", $s$2], [16, \\"23:1-23:1\\", $s$2]]),
    $m$fn1$2 = $M.fun(\\"m$fn1$2\\", \\"fn1\\", null, $m$code_js$0, [], 0, 3, \\"25:14-28:1\\", 0, function fn1($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"26:2-26:16\\");
      $.state = 1;

    case 1:
      $l[1
      /*v5*/
      ] = 10;
      $.goto = 2;
      $brk(\\"27:2-27:55\\");
      $.state = 2;

    case 2:
      $.goto = 3;
      $p = $mcall(\\"f2\\", $l[0][2
      /*mod*/
      ]);
      $.state = 3;

    case 3:
      $l[2] = $p;
      $.goto = 4;
      $p = new ($context.call = $l[0][6
      /*C*/
      ])($l[0][5
      /*v0*/
      ], $l[1
      /*v5*/
      ]);
      $.state = 4;

    case 4:
      $.goto = 5;
      $p = $mcall(\\"some\\", $l[0][2
      /*mod*/
      ], {
        a: $l[2],
        b: [$p]
      });
      $.state = 5;

    case 5:
      $.result = $p;
      $.goto = 7;
      continue;

    case 6:
      $.goto = 7;
      return $unhandled($.error);

    case 7:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[4, \\"26:2-26:16\\", $s$6], [4, \\"27:2-27:55\\", $s$6], [2, \\"27:23-27:31\\", $s$6], [2, \\"27:37-27:50\\", $s$6], [2, \\"27:9-27:54\\", $s$6], [0, null, $s$6], [16, \\"28:1-28:1\\", $s$6], [16, \\"28:1-28:1\\", $s$6]]);

$M.moduleExports();"
`;

exports[`default transpiler 2`] = `
"var $M = require(\\"../../../api\\"),
    $forInIterator = $M.forInIterator,
    $context = $M.context,
    $ret = $M.ret,
    $unhandled = $M.unhandled,
    $brk = $M.brk,
    $mcall = $M.mcall,
    $m = $M.module(\\"test/__fixtures__/transform/mod1.js\\", null, typeof module === \\"undefined\\" ? null : module, null, \\"$\\", {
  __webpack_require__: typeof __webpack_require__ !== \\"undefined\\" && __webpack_require__
}, null),
    $s$1 = [{
  M2: [1, null],
  _getRequireWildcardCache: [2, null],
  _interopRequireWildcard: [3, null],
  j: [4, \\"3:4-3:5\\"],
  run: [5, \\"5:16-5:19\\"]
}, null, 0],
    $s$2 = [{
  cache: [1, null]
}, $s$1, 1],
    $s$3 = [{}, $s$2, 2],
    $s$4 = [{
  obj: [1, null],
  cache: [2, null],
  newObj: [3, null],
  hasPropertyDescriptor: [4, null],
  key: [5, null],
  desc: [6, null]
}, $s$1, 1],
    $s$5 = [{
  i: [1, \\"5:20-5:21\\"]
}, $s$1, 1],
    $m$mod1_js$0 = $M.fun(\\"m$mod1_js$0\\", \\"mod1.js\\", null, null, [], 0, 6, \\"1:0-14:0\\", 32, function mod1_js($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $l[2
      /*_getRequireWildcardCache*/
      ] = $m$_getRequireWildcardCache$1($);
      $l[3
      /*_interopRequireWildcard*/
      ] = $m$_interopRequireWildcard$3($);
      $l[5
      /*run*/
      ] = $m$run$4($);
      module.exports.__esModule = true;
      module.exports.run = $l[5
      /*run*/
      ];
      $.goto = 1;
      $brk(\\"1:0-1:29\\");
      $.state = 1;

    case 1:
      $.goto = 2;
      $p = ($context.moduleId = require.resolve(\\"./mod2\\"), $M.force(require(\\"./mod2\\")));
      $.state = 2;

    case 2:
      $.goto = 3;
      $p = ($context.call = $l[3
      /*_interopRequireWildcard*/
      ])($p);
      $.state = 3;

    case 3:
      $l[1
      /*M2*/
      ] = $p;
      $.goto = 4;
      $brk(\\"3:0-3:10\\");
      $.state = 4;

    case 4:
      $l[4
      /*j*/
      ] = 0;
      $.goto = 5;
      $brk(\\"12:0-12:6\\");
      $.state = 5;

    case 5:
      $.goto = 6;
      ($context.call = $l[5
      /*run*/
      ])();
      $.state = 6;

    case 6:
      $.goto = 7;
      $brk(\\"13:0-13:6\\");
      $.state = 7;

    case 7:
      $.goto = 9;
      ($context.call = $l[5
      /*run*/
      ])();
      continue;

    case 8:
      $.goto = 9;
      return $unhandled($.error);

    case 9:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 0, [[4, \\"1:0-1:29\\", $s$1], [2, null, $s$1], [2, null, $s$1], [4, \\"3:0-3:10\\", $s$1], [4, \\"12:0-12:6\\", $s$1], [2, \\"12:0-12:5\\", $s$1], [4, \\"13:0-13:6\\", $s$1], [2, \\"13:0-13:5\\", $s$1], [16, \\"14:0-14:0\\", $s$1], [16, \\"14:0-14:0\\", $s$1]]),
    $m$_getRequireWildcardCache$1 = $M.fun(\\"m$_getRequireWildcardCache$1\\", \\"_getRequireWildcardCache\\", null, $m$mod1_js$0, [], 0, 2, null, 0, function _getRequireWildcardCache($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      if (typeof WeakMap !== \\"function\\") {
        $.state = 1;
      } else {
        $.goto = 2;
        continue;
      }

    case 1:
      $.result = null;
      $.goto = 5;
      continue;

    case 2:
      $.goto = 3;
      $p = new ($context.call = WeakMap)();
      $.state = 3;

    case 3:
      $l[1
      /*cache*/
      ] = $p;
      $l[0][2
      /*_getRequireWildcardCache*/
      ] = $m$f$2($);
      $.result = $l[1
      /*cache*/
      ];
      $.goto = 5;
      continue;

    case 4:
      $.goto = 5;
      return $unhandled($.error);

    case 5:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[0, null, $s$2], [0, null, $s$2], [2, null, $s$2], [0, null, $s$2], [16, null, $s$2], [16, null, $s$2]]),
    $m$f$2 = $M.fun(\\"m$f$2\\", null, null, $m$_getRequireWildcardCache$1, [], 0, 1, null, 0, function ($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.result = $l[0][1
      /*cache*/
      ];
      $.goto = 2;
      continue;

    case 1:
      $.goto = 2;
      return $unhandled($.error);

    case 2:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 2, [[0, null, $s$3], [16, null, $s$3], [16, null, $s$3]]),
    $m$_interopRequireWildcard$3 = $M.fun(\\"m$_interopRequireWildcard$3\\", \\"_interopRequireWildcard\\", null, $m$mod1_js$0, [\\"obj\\"], 1, 9, null, 0, function _interopRequireWildcard($, $l, $p) {
  var $1;

  for (;;) switch ($.state = $.goto) {
    case 0:
      $1 = $l[1
      /*obj*/
      ];

      if ($1) {
        $.state = 1;
      } else {
        $.goto = 2;
        continue;
      }

    case 1:
      $1 = $l[1
      /*obj*/
      ].__esModule;
      $.state = 2;

    case 2:
      if ($1) {
        $.state = 3;
      } else {
        $.goto = 4;
        continue;
      }

    case 3:
      $.result = $l[1
      /*obj*/
      ];
      $.goto = 42;
      continue;

    case 4:
      $1 = $l[1
      /*obj*/
      ] === null;

      if ($1) {
        $.state = 5;
      } else {
        $.goto = 38;
        continue;
      }

    case 5:
      if ($1) {
        $.state = 6;
      } else {
        $.goto = 7;
        continue;
      }

    case 6:
      $.result = {
        default: $l[1
        /*obj*/
        ]
      };
      $.goto = 42;
      continue;

    case 7:
      $.goto = 8;
      $p = ($context.call = $l[0][2
      /*_getRequireWildcardCache*/
      ])();
      $.state = 8;

    case 8:
      $l[2
      /*cache*/
      ] = $p;
      $l[7] = $l[2
      /*cache*/
      ];

      if ($l[7]) {
        $.state = 9;
      } else {
        $.goto = 11;
        continue;
      }

    case 9:
      $.goto = 10;
      $p = $mcall(\\"has\\", $l[2
      /*cache*/
      ], $l[1
      /*obj*/
      ]);
      $.state = 10;

    case 10:
      $l[7] = $p;
      $.state = 11;

    case 11:
      if ($l[7]) {
        $.state = 12;
      } else {
        $.goto = 14;
        continue;
      }

    case 12:
      $.goto = 13;
      $p = $mcall(\\"get\\", $l[2
      /*cache*/
      ], $l[1
      /*obj*/
      ]);
      $.state = 13;

    case 13:
      $.result = $p;
      $.goto = 42;
      continue;

    case 14:
      $l[3
      /*newObj*/
      ] = {};
      $1 = Object.defineProperty;

      if ($1) {
        $.state = 15;
      } else {
        $.goto = 16;
        continue;
      }

    case 15:
      $1 = Object.getOwnPropertyDescriptor;
      $.state = 16;

    case 16:
      $l[4
      /*hasPropertyDescriptor*/
      ] = $1;
      $.goto = 17;
      $p = $forInIterator($l[1
      /*obj*/
      ]);
      $.state = 17;

    case 17:
      $l[7] = $p;
      $.state = 18;

    case 18:
      $context.call = $l[7].next;
      $.goto = 19;
      $p = $l[7].next();
      $.state = 19;

    case 19:
      if ($p.done) {
        $.state = 20;
      } else {
        $.goto = 23;
        continue;
      }

    case 20:
      $l[3
      /*newObj*/
      ].default = $l[1
      /*obj*/
      ];

      if ($l[2
      /*cache*/
      ]) {
        $.state = 21;
      } else {
        $.goto = 22;
        continue;
      }

    case 21:
      $.goto = 22;
      $mcall(\\"set\\", $l[2
      /*cache*/
      ], $l[1
      /*obj*/
      ], $l[3
      /*newObj*/
      ]);
      $.state = 22;

    case 22:
      $.result = $l[3
      /*newObj*/
      ];
      $.goto = 42;
      continue;

    case 23:
      $l[5
      /*key*/
      ] = $p.value;
      $.goto = 24;
      $p = $mcall(\\"call\\", Object.prototype.hasOwnProperty, $l[1
      /*obj*/
      ], $l[5
      /*key*/
      ]);
      $.state = 24;

    case 24:
      if ($p) {
        $.state = 25;
      } else {
        $.goto = 37;
        continue;
      }

    case 25:
      if ($l[4
      /*hasPropertyDescriptor*/
      ]) {
        $.state = 26;
      } else {
        $.goto = 36;
        continue;
      }

    case 26:
      $.goto = 27;
      $p = $mcall(\\"getOwnPropertyDescriptor\\", Object, $l[1
      /*obj*/
      ], $l[5
      /*key*/
      ]);
      $.state = 27;

    case 27:
      $l[8] = $p;
      $.state = 28;

    case 28:
      $l[6
      /*desc*/
      ] = $l[8];
      $1 = $l[6
      /*desc*/
      ];

      if ($1) {
        $.state = 29;
      } else {
        $.goto = 32;
        continue;
      }

    case 29:
      $1 = $l[6
      /*desc*/
      ].get;

      if ($1) {
        $.state = 30;
      } else {
        $.goto = 31;
        continue;
      }

    case 30:
      $.goto = 32;
      continue;

    case 31:
      $1 = $l[6
      /*desc*/
      ].set;
      $.goto = 30;
      continue;

    case 32:
      if ($1) {
        $.state = 33;
      } else {
        $.goto = 35;
        continue;
      }

    case 33:
      $.goto = 34;
      $mcall(\\"defineProperty\\", Object, $l[3
      /*newObj*/
      ], $l[5
      /*key*/
      ], $l[6
      /*desc*/
      ]);
      $.state = 34;

    case 34:
      $.goto = 37;
      continue;

    case 35:
      $l[3
      /*newObj*/
      ][$l[5
      /*key*/
      ]] = $l[1
      /*obj*/
      ][$l[5
      /*key*/
      ]];
      $.goto = 34;
      continue;

    case 36:
      $l[8] = null;
      $.goto = 28;
      continue;

    case 37:
      $.goto = 18;
      continue;

    case 38:
      $1 = typeof $l[1
      /*obj*/
      ] !== \\"object\\";

      if ($1) {
        $.state = 39;
      } else {
        $.goto = 40;
        continue;
      }

    case 39:
      $1 = typeof $l[1
      /*obj*/
      ] !== \\"function\\";
      $.state = 40;

    case 40:
      $.goto = 5;
      continue;

    case 41:
      $.goto = 42;
      return $unhandled($.error);

    case 42:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [2, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [0, null, $s$4], [16, null, $s$4], [16, null, $s$4]]),
    $m$run$4 = $M.fun(\\"m$run$4\\", \\"run\\", null, $m$mod1_js$0, [\\"i\\"], 1, 2, \\"5:7-10:1\\", 0, function run($, $l, $p) {
  var $1;

  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"5:20-5:25\\");
      $.state = 1;

    case 1:
      if ($l[1
      /*i*/
      ] === void 0) {
        $.state = 2;
      } else {
        $.goto = 4;
        continue;
      }

    case 2:
      $.goto = 3;
      $brk(\\"5:20-5:25\\");
      $.state = 3;

    case 3:
      $l[1
      /*i*/
      ] = 1;
      $.state = 4;

    case 4:
      $.goto = 5;
      $brk(\\"6:2-6:9\\");
      $.state = 5;

    case 5:
      $l[0][4
      /*j*/
      ] = $l[0][4
      /*j*/
      ] + $l[1
      /*i*/
      ];
      $.goto = 6;
      $brk(\\"7:2-7:23\\");
      $.state = 6;

    case 6:
      $1 = $l[1
      /*i*/
      ];
      $l[1
      /*i*/
      ] = $1 + 1;
      $.goto = 7;
      $p = $mcall(\\"f1\\", $l[0][1
      /*M2*/
      ], $1);
      $.state = 7;

    case 7:
      $.goto = 8;
      $mcall(\\"f2\\", $l[0][1
      /*M2*/
      ], $p, $l[1
      /*i*/
      ]);
      $.state = 8;

    case 8:
      $.goto = 9;
      $brk(\\"8:2-8:9\\");
      $.state = 9;

    case 9:
      $l[0][4
      /*j*/
      ] = $l[0][4
      /*j*/
      ] + $l[1
      /*i*/
      ];
      $.goto = 10;
      $brk(\\"9:2-9:31\\");
      $.state = 10;

    case 10:
      $.goto = 11;
      $mcall(\\"log\\", console, \`i:\${$l[1
      /*i*/
      ]},j:\${$l[0][4
      /*j*/
      ]}\`);
      $.state = 11;

    case 11:
      $.goto = 13;
      $brk(\\"10:1-10:1\\");
      continue;

    case 12:
      $.goto = 13;
      return $unhandled($.error);

    case 13:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[4, \\"5:20-5:25\\", $s$5], [0, null, $s$5], [4, \\"5:20-5:25\\", $s$5], [0, null, $s$5], [4, \\"6:2-6:9\\", $s$5], [4, \\"7:2-7:23\\", $s$5], [2, \\"7:8-7:18\\", $s$5], [2, \\"7:2-7:22\\", $s$5], [4, \\"8:2-8:9\\", $s$5], [4, \\"9:2-9:31\\", $s$5], [2, \\"9:2-9:30\\", $s$5], [36, \\"10:1-10:1\\", $s$5], [16, \\"10:1-10:1\\", $s$5], [16, \\"10:1-10:1\\", $s$5]]);

$M.moduleExports();"
`;

exports[`default transpiler 3`] = `
"var $M = require(\\"../../../api\\"),
    $context = $M.context,
    $ret = $M.ret,
    $unhandled = $M.unhandled,
    $brk = $M.brk,
    $mcall = $M.mcall,
    $m = $M.module(\\"test/__fixtures__/transform/mod2.js\\", null, typeof module === \\"undefined\\" ? null : module, null, \\"$\\", {
  __webpack_require__: typeof __webpack_require__ !== \\"undefined\\" && __webpack_require__
}, null),
    $s$1 = [{
  cnt: [1, \\"1:4-1:7\\"],
  A: [2, \\"3:9-3:10\\"],
  B: [3, \\"8:9-8:10\\"],
  f1: [4, \\"13:16-13:18\\"],
  f2: [5, \\"21:16-21:18\\"]
}, null, 0],
    $s$2 = [{
  i: [1, \\"3:11-3:12\\"]
}, $s$1, 1],
    $s$3 = [{
  i: [1, \\"8:11-8:12\\"]
}, $s$1, 1],
    $s$4 = [{
  i: [1, \\"13:19-13:20\\"],
  a: [2, \\"16:8-16:9\\"]
}, $s$1, 1],
    $s$5 = [{
  i: [1, \\"21:19-21:20\\"]
}, $s$1, 1],
    $m$mod2_js$0 = $M.fun(\\"m$mod2_js$0\\", \\"mod2.js\\", null, null, [], 0, 6, \\"1:0-25:0\\", 32, function mod2_js($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $l[2
      /*A*/
      ] = $m$A$1($);
      $l[3
      /*B*/
      ] = $m$B$2($);
      $l[4
      /*f1*/
      ] = $m$f1$3($);
      $l[5
      /*f2*/
      ] = $m$f2$4($);
      module.exports.__esModule = true;
      module.exports.f1 = $l[4
      /*f1*/
      ];
      module.exports.f2 = $l[5
      /*f2*/
      ];
      $.goto = 1;
      $brk(\\"1:0-1:12\\");
      $.state = 1;

    case 1:
      $l[1
      /*cnt*/
      ] = 0;
      $.goto = 3;
      continue;

    case 2:
      $.goto = 3;
      return $unhandled($.error);

    case 3:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 0, [[4, \\"1:0-1:12\\", $s$1], [0, \\"1:4-1:11\\", $s$1], [16, \\"25:0-25:0\\", $s$1], [16, \\"25:0-25:0\\", $s$1]]),
    $m$A$1 = $M.fun(\\"m$A$1\\", \\"A\\", null, $m$mod2_js$0, [\\"i\\"], 0, 2, \\"3:0-6:1\\", 8, function A($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"4:2-4:24\\");
      $.state = 1;

    case 1:
      $.self.i = $l[1
      /*i*/
      ] * 10 + $l[0][1
      /*cnt*/
      ];
      $.goto = 2;
      $brk(\\"5:2-5:22\\");
      $.state = 2;

    case 2:
      $.goto = 3;
      $p = new ($context.call = $l[0][3
      /*B*/
      ])(100);
      $.state = 3;

    case 3:
      $.self.b = $p;
      $.goto = 5;
      $brk(\\"6:1-6:1\\");
      continue;

    case 4:
      $.goto = 5;
      return $unhandled($.error);

    case 5:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[4, \\"4:2-4:24\\", $s$2], [4, \\"5:2-5:22\\", $s$2], [2, \\"5:11-5:21\\", $s$2], [36, \\"6:1-6:1\\", $s$2], [16, \\"6:1-6:1\\", $s$2], [16, \\"6:1-6:1\\", $s$2]]),
    $m$B$2 = $M.fun(\\"m$B$2\\", \\"B\\", null, $m$mod2_js$0, [\\"i\\"], 0, 2, \\"8:0-11:1\\", 8, function B($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"9:2-9:13\\");
      $.state = 1;

    case 1:
      $.self.i = $l[1
      /*i*/
      ];
      $.goto = 2;
      $brk(\\"10:2-10:26\\");
      $.state = 2;

    case 2:
      $.result = {
        b: $.self,
        cnt: $l[0][1
        /*cnt*/
        ]
      };
      $.goto = 4;
      continue;

    case 3:
      $.goto = 4;
      return $unhandled($.error);

    case 4:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[4, \\"9:2-9:13\\", $s$3], [4, \\"10:2-10:26\\", $s$3], [0, \\"10:9-10:25\\", $s$3], [16, \\"11:1-11:1\\", $s$3], [16, \\"11:1-11:1\\", $s$3]]),
    $m$f1$3 = $M.fun(\\"m$f1$3\\", \\"f1\\", null, $m$mod2_js$0, [\\"i\\"], 0, 3, \\"13:7-19:1\\", 0, function f1($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"14:2-14:8\\");
      $.state = 1;

    case 1:
      $l[0][1
      /*cnt*/
      ] = $l[0][1
      /*cnt*/
      ] + 1;
      $.goto = 2;
      $brk(\\"15:2-15:32\\");
      $.state = 2;

    case 2:
      $.goto = 3;
      $mcall(\\"log\\", console, \`f1:\${$l[1
      /*i*/
      ]}@\${$l[0][1
      /*cnt*/
      ]}\`);
      $.state = 3;

    case 3:
      $.goto = 4;
      $brk(\\"16:2-16:23\\");
      $.state = 4;

    case 4:
      $.goto = 5;
      $p = new ($context.call = $l[0][2
      /*A*/
      ])($l[0][1
      /*cnt*/
      ]);
      $.state = 5;

    case 5:
      $l[2
      /*a*/
      ] = $p;
      $.goto = 6;
      $brk(\\"17:2-17:23\\");
      $.state = 6;

    case 6:
      $.goto = 7;
      $mcall(\\"log\\", console, \\"A:\\", $l[2
      /*a*/
      ]);
      $.state = 7;

    case 7:
      $.goto = 8;
      $brk(\\"18:2-18:13\\");
      $.state = 8;

    case 8:
      $.result = $l[0][1
      /*cnt*/
      ];
      $.goto = 10;
      continue;

    case 9:
      $.goto = 10;
      return $unhandled($.error);

    case 10:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[4, \\"14:2-14:8\\", $s$4], [4, \\"15:2-15:32\\", $s$4], [2, \\"15:2-15:31\\", $s$4], [4, \\"16:2-16:23\\", $s$4], [2, \\"16:12-16:22\\", $s$4], [4, \\"17:2-17:23\\", $s$4], [2, \\"17:2-17:22\\", $s$4], [4, \\"18:2-18:13\\", $s$4], [0, null, $s$4], [16, \\"19:1-19:1\\", $s$4], [16, \\"19:1-19:1\\", $s$4]]),
    $m$f2$4 = $M.fun(\\"m$f2$4\\", \\"f2\\", null, $m$mod2_js$0, [\\"i\\"], 0, 2, \\"21:7-24:1\\", 0, function f2($, $l, $p) {
  for (;;) switch ($.state = $.goto) {
    case 0:
      $.goto = 1;
      $brk(\\"22:2-22:8\\");
      $.state = 1;

    case 1:
      $l[0][1
      /*cnt*/
      ] = $l[0][1
      /*cnt*/
      ] + 1;
      $.goto = 2;
      $brk(\\"23:2-23:32\\");
      $.state = 2;

    case 2:
      $.goto = 3;
      $mcall(\\"log\\", console, \`f2:\${$l[1
      /*i*/
      ]}@\${$l[0][1
      /*cnt*/
      ]}\`);
      $.state = 3;

    case 3:
      $.goto = 5;
      $brk(\\"24:1-24:1\\");
      continue;

    case 4:
      $.goto = 5;
      return $unhandled($.error);

    case 5:
      return $ret($.result);

    default:
      throw new Error(\\"Invalid state\\");
  }
}, null, null, 1, [[4, \\"22:2-22:8\\", $s$5], [4, \\"23:2-23:32\\", $s$5], [2, \\"23:2-23:31\\", $s$5], [36, \\"24:1-24:1\\", $s$5], [16, \\"24:1-24:1\\", $s$5], [16, \\"24:1-24:1\\", $s$5]]);

$M.moduleExports();"
`;
